# Numerical-Analysis-project

./: CMakeLists.txt  README.md  curvefitting.cpp  curvefitting.h  eulermethods.cpp  eulermethods.h  expression_parser.cpp  expression_parser.h  integrationmethods.cpp  integrationmethods.h  interpolationmethods.cpp  interpolationmethods.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  rootmethods.cpp  rootmethods.h
